--- a/index.html
+++ b/index.html
@@ -8,26 +8,7 @@
     </head>
 
     <body>
-
+        <p id="paint_output">Waiting for randomness...</p>
     </body>
-    <script type="module">
-        import Client, { HTTP } from 'https://cdn.jsdelivr.net/npm/drand-client/drand.js'
-        const chainHash = '8990e7a9aaed2ffed73dbd7092123d6f289930540d7651336225dc172e51b2ce' 
-        const urls = [
-            'https://api.drand.sh',
-            'https://drand.cloudflare.com'
-        ];
-
-        async function main() {
-
-            const options = { chainHash };
-            const client = await Client.wrap(HTTP.forURLs(urls, chainHash), options);
-            const res = await client.get();
-            console.log(res.round, res.randomness);
-
-        }
-
-        main();
-        setInterval(main, 5000);
-    </script>
+    <script type="module" src="script.js"></script>
 </html>
