--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dungeons & Dragons & Drand | Dice Roller</title>
+        <style>
+        body {
+            background: #202020;
+            color: #f2f3f4;
+            margin: auto;
+            padding: 30px;
+            width: 50%;
+        }
+        </style>
     </head>
 
     <body>
