Seed randomness with Drand.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </style>
     </head>
 
-    <body>
-        <p id="paint_output">Waiting for randomness...</p>
+    <body> 
+        <button onclick="main()">Click here.</button>
     </body>
-    <script type="module" src="script.js"></script>
+    
+    <script src="script.js"></script>
 </html>
